--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Новости культуры</title>
+    <link rel="icon" href="img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
