Добавлена ширина для картинки

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Анонс главной новости -->
       <section class="main-news">
         <div class="wrapper">
-          <img class="main-news-img" src="img/logo.svg" alt="Логотип">
+          <img class="main-news-img" width="55" src="img/logo.svg" alt="Логотип">
           <h3 class="main-news-title"><a class="main-news-link" href="main-news.html" title="Подводный отель">Подводный отель</a></h3>
           <p class="main-news-text">
             Как известно, Дубай – город контрастов. Самые революционные <br>и фантастические мечты архитекторов способен воплотить в жизнь этот мегаполис, построенный на нефти и за счет нефти
