--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <!--[if IE]-->
+      <link rel="stylesheet" href="css/ie11.css">
+    <!--[endif]-->
 </head>
 <body>
     <!-- Шапка с главным меню -->
