Правки стилей блока обзоров

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             <li class="review-item">
               <img class="review-img" src="img/news2_photo.jpg" alt="Анатомия за 30 секунд" width="370">
               <h3 class="review-heading"><a class="review-link" href="anathomy-from-30-second" title="Анатомия за 30 секунд">Анатомия за 30 секунд</a></h3>
-              <p class="review-text">Сейчас, когда мир открыт нараспашку для человека <br> и его познавательных изысканий, интерес<br>
-                к научно‑популярной литературе заметно вырос</p>
+              <p class="review-text">Сейчас, когда мир открыт нараспашку для человека и его познавательных изысканий, интерес<br> к научно‑популярной литературе заметно вырос</p>
             </li>
             <li class="review-item">
               <img class="review-img" src="img/news3_photo.jpg" alt="Сферические чудаки" width="370">
